# discord-bot

./: .env .example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  watch.py
cogs/: admin.py  anime.py  economy.py  games.py  wfx.py  yuna.py
lib/llm/: __init__.py
lib/stablediffusion/: __init__.py
lib/tickengine/: __init__.py
lib/waifuit/: __init__.py
utils/: database.py  helper.py  logger.py
